<resources>
    <string name="app_name">Android Serminar</string>
    <string name="home">Home</string>
    <string name="productivity">Productivity</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="productivity_page">Productivity page</string>
    <string name="settings_page">Settings page</string>
    <string name="product_name">Product Name</string>
    <string name="_1000">1000</string>
    <string name="_1">1</string>
    <string name="date">Date</string>
    <string name="date_picker">Date picker</string>
    <string name="enter_url">Enter url</string>
    <string name="go_to_url">Go to Url</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="call_phone_number">Call phone number</string>
    <string name="go_to_demointent_activity">Go to DemoIntent Activity</string>
    <string name="go_to_other_activity">Go to other Activity</string>
    <string name="send_data_to_otther_activity">Send Data to otther Activity</string>
    <string name="send_data_to_other_activity">Send data to other Activity</string>
    <string name="enter_number">Enter Number</string>
    <string name="result">Result</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="sum_number">Sum Number</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">NAME</string>
    <string name="password">PASSWORD</string>
    <string name="save">SAVE</string>
    <string name="next">NEXT</string>
    <string name="load">LOAD</string>
    <string name="back">BACK</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="register_account">Register Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
</resources>