<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductivityFragment"
    android:orientation="vertical"
    android:background="#F4EDAE"
    android:padding="16dp"
    android:gravity="center">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productivity_page"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="24sp"
        android:textStyle="italic|bold"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker"
        android:textSize="24sp"
        android:id="@+id/btnDatePicker"/>

</LinearLayout>